// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentsList When parent is Target Document should treat all Attachments as read only 1`] = `
<div
  className="attachments-list-parent"
>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList should render a sorted list of attachments (files) 1`] = `
<div
  className="attachments-list-parent"
>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entity="parentId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;

exports[`AttachmentsList when files is empty should add button in Downloads section 1`] = `
<div
  className="attachments-list-parent"
>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entity="parentId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;

exports[`AttachmentsList when files is empty should render nothing if user not logged in 1`] = `
<div
  className="attachments-list-parent"
>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entity="parentId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;
